Added setting so we can prompt (or the user can choose to never show one) when closing if a Window or the TimingController is running. Added log importing functionality. Modified CSVImporter to work better with a child class. Made ChipRead sortable. Added a few comments to ChipRead as well as a new constructor for log imports. Removed status of from ChipRead constructors other than the one the database uses. Renamed a bunch of ListBoxItem subclasses.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Interfaces\UI\IMainPage.cs" />
     <Compile Include="Interfaces\UI\INewMainWindow.cs" />
     <Compile Include="Interfaces\UI\IWindowCallback.cs" />
+    <Compile Include="IO\LogImporter.cs" />
     <Compile Include="Objects\AgeGroup.cs" />
     <Compile Include="Objects\Apparel.cs" />
     <Compile Include="Objects\AppSetting.cs" />
@@ -267,6 +268,15 @@
     </Compile>
     <Compile Include="UI\Participants\ModifyParticipantWindow.xaml.cs">
       <DependentUpon>ModifyParticipantWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Timing\Import\ImportLogPage1.xaml.cs">
+      <DependentUpon>ImportLogPage1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Timing\Import\ImportLogPage2.xaml.cs">
+      <DependentUpon>ImportLogPage2.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Timing\Import\ImportLogWindow.xaml.cs">
+      <DependentUpon>ImportLogWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Timing\ManualEntryWindow.xaml.cs">
       <DependentUpon>ManualEntryWindow.xaml</DependentUpon>
@@ -461,6 +471,18 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Participants\ModifyParticipantWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Timing\Import\ImportLogPage1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Timing\Import\ImportLogPage2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Timing\Import\ImportLogWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
