Removed unnecessary log output call from SQLite Database. Fixed a bug where GetUsefulChipReads in SQLite database searched for ignored chip reads instead of the untouched reads. Added Timing Worker class that does all the calculation behind the scenes. Added calls to Finish on importers.  Moved others to window closing so they are always called. Added code that may help closing Excel application instances when using Excel Exporter. Added some checks before we try to stop a few things for sanity sake.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Objects\Segment.cs" />
     <Compile Include="Objects\TimingSystem.cs" />
     <Compile Include="Timing\TimingController.cs" />
+    <Compile Include="Timing\TimingWorker.cs" />
     <Compile Include="UI\ChipAssignment\ChipTool.xaml.cs">
       <DependentUpon>ChipTool.xaml</DependentUpon>
     </Compile>
