Changed how ITimingSystemInterface deals with messages. Split NonUI thread calls on MainWindow into two different categories so we can do specific work for TimingWorker/Controller. Added code for setting time instead of the simple 'hack' we used before.

--- a/EventDirector/EventDirector.csproj
+++ b/EventDirector/EventDirector.csproj
@@ -305,6 +305,9 @@
     <Compile Include="UI\Timing\PrintPage.xaml.cs">
       <DependentUpon>PrintPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Timing\SetTimeWindow.xaml.cs">
+      <DependentUpon>SetTimeWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Timing\TimingRawReadsPage.xaml.cs">
       <DependentUpon>TimingRawReadsPage.xaml</DependentUpon>
     </Compile>
@@ -509,6 +512,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Timing\PrintPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Timing\SetTimeWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
