Added a new class for keeping track of where participants are (DNF, DNS, Finished, Active). Moved Participant status from checked-in to it's own field. Fixed an error in the printing page that was introduced when I added a DNF finish time (it was truncating the 'time' field which meant it printed out D instead of DNF)

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Objects\AvailableBib.cs" />
     <Compile Include="Objects\BibGroup.cs" />
     <Compile Include="Objects\ChipRead.cs" />
+    <Compile Include="Objects\DivisionStats.cs" />
     <Compile Include="Objects\Range.cs" />
     <Compile Include="Objects\Segment.cs" />
     <Compile Include="Objects\TimingSystem.cs" />
