Moved some files out of the Print results page into their own 'interface' class for use in award printing. Added printing for awards. Added custom age groups for printing awards (and added a Constant integer to keep track of them, it's a division ID and saved with the event) Added some more controls to the database to get age groups based on division ID (for custom) and remove them based on the actual groups. Changed some getters and setters in Event into booleans to better reflect the nature of those values.

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Interfaces\UI\IMainWindow.cs" />
     <Compile Include="Interfaces\UI\IWindowCallback.cs" />
     <Compile Include="IO\LogImporter.cs" />
+    <Compile Include="IO\PrintingInterface.cs" />
     <Compile Include="MigraDocPrinting\MigraDocPrintDocument.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -294,6 +295,9 @@
     </Compile>
     <Compile Include="UI\Participants\ModifyParticipantWindow.xaml.cs">
       <DependentUpon>ModifyParticipantWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Timing\AwardPage.xaml.cs">
+      <DependentUpon>AwardPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Timing\DivisionStatsPage.xaml.cs">
       <DependentUpon>DivisionStatsPage.xaml</DependentUpon>
@@ -503,6 +507,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Participants\ModifyParticipantWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Timing\AwardPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
